--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="colorTertiaryDark">#202225</color>
     <color name="colorAccent">#D81B60</color>
     <color name="colorBlanco">#FFFFFF</color>
+    <color name="colorGrisClaro">#C5BEBE</color>
 </resources>
