--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,8 +6,8 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
 
-        <item name="colorAccent">@color/colorAccent</item>
         <item name="colorSecondary">@color/colorPrimary</item>
+
         <item name="boxStrokeColor">@color/colorPrimary</item>
         <item name="colorControlNormal">@color/colorTertiaryDark</item>
         <item name="colorControlActivated">@color/colorPrimary</item>
@@ -15,6 +15,11 @@
         <item name="android:autofilledHighlight">@android:color/transparent</item>
 
         <item name="android:statusBarColor">@android:color/black</item>
+        <item name="android:colorButtonNormal">@color/colorBlanco</item>
+        <item name="colorButtonNormal">@color/colorBlanco</item>
+        <item name="colorOnSurface">@color/colorBlanco</item>
+        
+
     </style>
 
 </resources>
