--- a/app/src/main/res/layouts/Servicios/layout/fragment_configuracion.xml
+++ b/app/src/main/res/layouts/Servicios/layout/fragment_configuracion.xml
@@ -111,10 +111,21 @@
             android:textSize="20sp" />
 
         <TextView
-            android:id="@+id/Configuracion_texto_otrasEstadisticas"
+            android:id="@+id/Configuracion_texto_eliminarCuenta"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/Configuracion_texto_cambiarContrasenya"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="20dp"
+            android:text="@string/eliminarCuenta"
+            android:textColor="@color/colorBlanco"
+            android:textSize="20sp" />
+
+        <TextView
+            android:id="@+id/Configuracion_texto_otrasEstadisticas"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/Configuracion_texto_eliminarCuenta"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="50dp"
             android:text="@string/otrasEstadisticas"
