--- a/app/src/main/res/layouts/Login/layout/fragment_registrar.xml
+++ b/app/src/main/res/layouts/Login/layout/fragment_registrar.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/RegistrarActivity_layoutBase"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -18,17 +19,22 @@
         android:gravity="center_horizontal"
         android:text="@string/registrarse"
         android:textColor="@color/colorPrimary"
-        android:textSize="42sp" />
+        android:textSize="42sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <com.google.android.material.textfield.TextInputLayout
 
         android:id="@+id/RegistrarActivity_email_TIL"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/RegistrarActivity_titulo"
         android:layout_marginTop="50dp"
         android:textColorHint="@color/colorPrimary"
-        app:hintTextColor="@color/colorPrimary">
+        app:hintTextColor="@color/colorPrimary"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/RegistrarActivity_titulo"
+        app:layout_constraintVertical_bias="0.0">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/RegistrarActivity_email_et"
@@ -44,10 +50,16 @@
         android:id="@+id/RegistrarActivity_password_TIL"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/RegistrarActivity_email_TIL"
-        android:layout_centerInParent="true"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:layout_marginTop="40dp"
         android:textColorHint="@color/colorPrimary"
-        app:hintTextColor="@color/colorPrimary">
+        app:hintTextColor="@color/colorPrimary"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/RegistrarActivity_email_TIL"
+        app:layout_constraintVertical_bias="0.0">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/RegistrarActivity_password_et"
@@ -65,10 +77,16 @@
         android:id="@+id/RegistrarActivity_confirmPassword_TIL"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/RegistrarActivity_password_TIL"
-        android:layout_centerInParent="true"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
         android:textColorHint="@color/colorPrimary"
-        app:hintTextColor="@color/colorPrimary">
+        app:hintTextColor="@color/colorPrimary"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/RegistrarActivity_password_TIL"
+        app:layout_constraintVertical_bias="0.0"
+        android:layout_marginTop="40dp">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/RegistrarActivity_confirmPassword_et"
@@ -85,7 +103,6 @@
         android:id="@+id/RegistrarActivity_registrar_btn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/RegistrarActivity_confirmPassword_TIL"
         android:layout_marginTop="20dp"
         android:backgroundTint="@color/colorSecondaryDark"
         android:paddingTop="20dp"
@@ -93,7 +110,10 @@
         android:text="@string/registrarse"
         android:textAllCaps="false"
         android:textColor="@color/colorPrimary"
-        android:textSize="18sp" />
+        android:textSize="18sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/RegistrarActivity_confirmPassword_TIL" />
 
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
 
